[gd_scene load_steps=6 format=3 uid="uid://btif7hfb7i3rc"]

[ext_resource type="FontFile" uid="uid://bon14dm77mpt8" path="res://fonts/KGRedHands.ttf" id="1_b30vr"]
[ext_resource type="Script" path="res://scripts/general/win_lose_scene.gd" id="1_f4xyt"]
[ext_resource type="LabelSettings" uid="uid://cyxrw7bvdde6q" path="res://themes/label_red_text.tres" id="3_tlqyx"]

[sub_resource type="LabelSettings" id="LabelSettings_s2hsg"]
font = ExtResource("1_b30vr")
font_size = 91
font_color = Color(1, 0, 0.239216, 1)
outline_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xtk78"]
bg_color = Color(2.40654e-06, 0.356872, 0.484594, 1)

[node name="LoseScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f4xyt")

[node name="BG" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1890, 980)
layout_mode = 0
offset_right = 1890.0
offset_bottom = 980.0
color = Color(0, 0.168627, 0.231373, 0.717647)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1890.0
offset_bottom = 980.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(1200, 0)
layout_mode = 2
alignment = 1

[node name="QUEPENA" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.37, 1, 0.3, 1)
theme_override_fonts/font = ExtResource("1_b30vr")
theme_override_font_sizes/font_size = 80
text = "QUE PENA :("
label_settings = ExtResource("3_tlqyx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoseText" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.37, 1, 0.3, 1)
theme_override_fonts/font = ExtResource("1_b30vr")
theme_override_font_sizes/font_size = 80
text = "Você não chegou ao seu destino!"
label_settings = SubResource("LabelSettings_s2hsg")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="PlayAgain" type="Button" parent="."]
custom_minimum_size = Vector2(250, 50)
layout_mode = 0
offset_left = 820.0
offset_top = 875.0
offset_right = 1070.0
offset_bottom = 925.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_xtk78")
text = "TENTAR DE NOVO"

[connection signal="pressed" from="PlayAgain" to="." method="_on_play_again_pressed"]
