[gd_scene load_steps=7 format=3 uid="uid://diik6iqcg1u36"]

[ext_resource type="FontFile" uid="uid://bon14dm77mpt8" path="res://fonts/KGRedHands.ttf" id="1_nfo8h"]
[ext_resource type="Script" path="res://scripts/general/win_lose_scene.gd" id="1_rkmbc"]
[ext_resource type="FontFile" uid="uid://cqy64kfoqcffx" path="res://fonts/KGRedHandsOutline.ttf" id="2_flast"]

[sub_resource type="LabelSettings" id="LabelSettings_i1k1n"]
font = ExtResource("2_flast")
font_size = 133
font_color = Color(0.290667, 1, 0.24, 1)
outline_size = 5
outline_color = Color(0.290196, 1, 0.239216, 1)

[sub_resource type="LabelSettings" id="LabelSettings_s2hsg"]
font = ExtResource("1_nfo8h")
font_size = 100
font_color = Color(0.290667, 1, 0.24, 1)
outline_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xtk78"]
bg_color = Color(0.0943, 0.120608, 0.41, 1)

[node name="WinScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rkmbc")

[node name="BG" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1890, 980)
layout_mode = 0
offset_right = 1890.0
offset_bottom = 980.0
color = Color(0, 0.137255, 0.258824, 0.639216)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1890.0
offset_bottom = 980.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="PARABENS" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.37, 1, 0.3, 1)
theme_override_fonts/font = ExtResource("1_nfo8h")
theme_override_font_sizes/font_size = 80
text = "PARABÉNS!"
label_settings = SubResource("LabelSettings_i1k1n")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VoceAcertou" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.37, 1, 0.3, 1)
theme_override_fonts/font = ExtResource("1_nfo8h")
theme_override_font_sizes/font_size = 80
text = "Você acertou!"
label_settings = SubResource("LabelSettings_s2hsg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayAgain" type="Button" parent="."]
custom_minimum_size = Vector2(250, 50)
layout_mode = 0
offset_left = 820.0
offset_top = 875.0
offset_right = 1070.0
offset_bottom = 925.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_xtk78")
text = "PRÓXIMA FASE"

[connection signal="pressed" from="PlayAgain" to="." method="_on_next_phase_pressed"]
